@@ -85,7 +85,90 @@ La idea es parecida a los índices de referencias cruzadas que habitualmente apa
 
 ## [Installing Elastic Search](https://www.elastic.co/guide/en/elasticsearch/reference/current/install-elasticsearch.html)
 
-### Install Elasticsearch on macOS with Homebrew
+### Prerequisitos para la Instalación de Elastic Search
+
+Elasticsearch is built on Java 8.
+
+Instructions on how to install Java 8 are available on [Oracle’s website](https://docs.oracle.com/javase/8/docs/technotes/guides/install/install_overview.html)
+
+You can run `java -version` 
+from the command line to confirm that Java is installed and ready.
+
+```
+$ java --version
+java 9.0.4
+Java(TM) SE Runtime Environment (build 9.0.4+11)
+Java HotSpot(TM) 64-Bit Server VM (build 9.0.4+11, mixed mode)
+```
+
+### Instalación de la versión del libro de ElasticSearch 
+
+Una forma de instalarse ElasticSearch es ir a la página de descargas:
+
+* [https://www.elastic.co/es/downloads/](https://www.elastic.co/es/downloads/)
+
+La versión que se usa en el libro es la 5.2 que se puede descargar desde aquí:
+
+* [https://www.elastic.co/es/downloads/past-releases/elasticsearch-5-2-2](https://www.elastic.co/es/downloads/past-releases/elasticsearch-5-2-2
+)
+
+Aquí se puede encontrar una [guía de inicio rápido.](https://www.elastic.co/es/start).
+
+### Instalación de la versión 6.4.2. Octubre 2018
+
+Esta es la versión que he usado en mi instalación, [la 6.4.2](https://www.elastic.co/es/downloads/past-releases/elasticsearch-6-4-2) para seguir el libro a finales de 2018 y comienzos de 2019:
+
+```
+$ elasticsearch --version
+Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
+Version: 6.4.2, Build: default/tar/04711c2/2018-09-26T13:34:09.098244Z, JVM: 9.0.4
+```
+
+Once you download the archive, 
+unzip it 
+and run `bin/elasticsearch` from the command line. 
+
+You should see a lot of output containing something like the following (much of the output is omitted here for brevity).
+
+```
+$ bin/elasticsearch
+[INFO ][o.e.n.Node ] [] initializing ...
+... many lines omitted ...
+[INFO ][o.e.h.HttpServer ] [kAh7Q7Z] publish_address {127.0.0.1:9200},
+    bound_addresses {[::1]:9200}, {127.0.0.1:9200}
+[INFO ][o.e.n.Node            ] [kAh7Q7Z] started
+[INFO ][o.e.g.GatewayService  ] [kAh7Q7Z] recovered [0] indices into
+    cluster_state
+```
+
+Notice the **`publish_address`** and **`bound_addresses`** listed toward the end of the output. 
+By default, **Elasticsearch binds TCP port 9200 for its HTTP endpoint**.
+
+You can specify a lot of settings when setting up an Elasticsearch cluster. By default, is running in development mode.
+
+A full discussion of the Elasticsearch cluster settings for version 5.2  is [Elastic’s Important System Configuration 5.2 page](https://www.elastic.co/guide/en/elasticsearch/reference/5.2/system-config.html).
+The same instructions [for the current version are here](https://www.elastic.co/guide/en/elasticsearch/reference/current/system-config.html)
+
+To have Elasticsearch in the `PATH`, I have added a small script in my `~/.bash_profile`:
+
+```
+[~/campus-virtual/1819/ca1819/practicas(master)]$ cat ~/.bash_profile | sed -ne '/elastic/,/^$/p'
+source ~/bin/elasticsearch-set
+```
+
+With this contents:
+
+```
+[~/campus-virtual/1819/ca1819/practicas(master)]$ cat ~/bin/elastic-search-set
+export ES_HOME=~/Applications/elasticsearch-6.4.2
+export PATH=$ES_HOME/bin:$PATH
+```
+
+### Instalación de la versión 7.5.0 Diciembre 2019
+
+La version en Diciembre de 2019  es la [7.5.0](https://www.elastic.co/es/downloads/elasticsearch)
+
+### Install Elasticsearch on macOS with Homebrew. Diciembre 2019
 
 Apuntes tomados de [https://www.elastic.co/guide/en/elasticsearch/reference/current/brew.html](https://www.elastic.co/guide/en/elasticsearch/reference/current/brew.html)
 
@@ -340,6 +423,80 @@ Si visitamos con el navegador `http://localhost:9200`:
     [.../etc/elasticsearch]$ curl localhost:9200/_cat/nodes?h=ip,port,heapPercent,name
     127.0.0.1 9300 28 sanclemente-2.local
     ```
+
+
+
+
+### Running ElasticSearch
+
+Let us see where `elasticsearch` is installed:
+
+```
+[~]$ which elasticsearch
+/Users/casiano/Applications/elasticsearch-6.4.2/bin/elasticsearch
+```
+
+Let us execute `elasticsearch`in development mode.
+The flow of output when executed is overwhelming:
+
+```
+[~/sol-nodejs-the-right-way(master)]$ elasticsearch
+[Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
+[2019-12-15T11:28:46,903][INFO ][o.e.n.Node               ] [] initializing ...
+[2019-12-15T11:28:47,442][INFO ][o.e.e.NodeEnvironment    ] [9jAGWs_] using [1] data paths, mounts [[/ (/dev/disk1s1)]], net usable_space [19.5gb], net total_space [233.5gb], types [apfs]
+[2019-12-15T11:28:47,445][INFO ][o.e.e.NodeEnvironment    ] [9jAGWs_] heap size [990.7mb], compressed ordinary object pointers [true]
+[2019-12-15T11:28:47,740][INFO ][o.e.n.Node               ] [9jAGWs_] node name derived from node ID [9jAGWs_uQGmUPF4RyFkjTw]; set [node.name] to override
+[2019-12-15T11:28:47,740][INFO ][o.e.n.Node               ] [9jAGWs_] version[6.4.2], pid[84005], build[default/tar/04711c2/2018-09-26T13:34:09.098244Z], OS[Mac OS X/10.13.6/x86_64], JVM[Oracle Corporation/Java HotSpot(TM) 64-Bit Server VM/9.0.4/9.0.4+11]
+[2019-12-15T11:28:47,741][INFO ][o.e.n.Node               ] [9jAGWs_] JVM arguments [-Xms1g, -Xmx1g, -XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Djava.io.tmpdir=/var/folders/5g/l7k4y5112612gk6qxzy6jwv40000gn/T/elasticsearch.JiyCf7BF, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=data, -XX:ErrorFile=logs/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m, -Djava.locale.providers=COMPAT, -Des.path.home=/Users/casiano/Applications/elasticsearch-6.4.2, -Des.path.conf=/Users/casiano/Applications/elasticsearch-6.4.2/config, -Des.distribution.flavor=default, -Des.distribution.type=tar]
+[2019-12-15T11:28:53,337][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [aggs-matrix-stats]
+[2019-12-15T11:28:53,338][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [analysis-common]
+[2019-12-15T11:28:53,339][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [ingest-common]
+[2019-12-15T11:28:53,342][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [lang-expression]
+[2019-12-15T11:28:53,342][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [lang-mustache]
+[2019-12-15T11:28:53,343][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [lang-painless]
+[2019-12-15T11:28:53,343][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [mapper-extras]
+[2019-12-15T11:28:53,343][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [parent-join]
+[2019-12-15T11:28:53,344][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [percolator]
+[2019-12-15T11:28:53,344][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [rank-eval]
+[2019-12-15T11:28:53,344][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [reindex]
+[2019-12-15T11:28:53,345][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [repository-url]
+[2019-12-15T11:28:53,346][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [transport-netty4]
+[2019-12-15T11:28:53,346][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [tribe]
+[2019-12-15T11:28:53,347][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-core]
+[2019-12-15T11:28:53,348][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-deprecation]
+[2019-12-15T11:28:53,348][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-graph]
+[2019-12-15T11:28:53,348][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-logstash]
+[2019-12-15T11:28:53,348][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-ml]
+[2019-12-15T11:28:53,349][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-monitoring]
+[2019-12-15T11:28:53,350][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-rollup]
+[2019-12-15T11:28:53,350][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-security]
+[2019-12-15T11:28:53,351][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-sql]
+[2019-12-15T11:28:53,351][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-upgrade]
+[2019-12-15T11:28:53,351][INFO ][o.e.p.PluginsService     ] [9jAGWs_] loaded module [x-pack-watcher]
+[2019-12-15T11:28:53,352][INFO ][o.e.p.PluginsService     ] [9jAGWs_] no plugins loaded
+[2019-12-15T11:29:05,189][INFO ][o.e.x.s.a.s.FileRolesStore] [9jAGWs_] parsed [0] roles from file [/Users/casiano/Applications/elasticsearch-6.4.2/config/roles.yml]
+[2019-12-15T11:29:06,667][INFO ][o.e.x.m.j.p.l.CppLogMessageHandler] [controller/84063] [Main.cc@109] controller (64 bit): Version 6.4.2 (Build 660eefe6f2ea55) Copyright (c) 2018 Elasticsearch BV
+[2019-12-15T11:29:08,149][DEBUG][o.e.a.ActionModule       ] Using REST wrapper from plugin org.elasticsearch.xpack.security.Security
+[2019-12-15T11:29:08,701][INFO ][o.e.d.DiscoveryModule    ] [9jAGWs_] using discovery type [zen]
+[2019-12-15T11:29:10,495][INFO ][o.e.n.Node               ] [9jAGWs_] initialized
+[2019-12-15T11:29:10,496][INFO ][o.e.n.Node               ] [9jAGWs_] starting ...
+[2019-12-15T11:29:10,938][INFO ][o.e.t.TransportService   ] [9jAGWs_] publish_address {127.0.0.1:9300}, bound_addresses {[::1]:9300}, {127.0.0.1:9300}
+[2019-12-15T11:29:14,113][INFO ][o.e.c.s.MasterService    ] [9jAGWs_] zen-disco-elected-as-master ([0] nodes joined)[, ], reason: new_master {9jAGWs_}{9jAGWs_uQGmUPF4RyFkjTw}{2g1w5LQXSZ6gPKwgps9psw}{127.0.0.1}{127.0.0.1:9300}{ml.machine_memory=8589934592, xpack.installed=true, ml.max_open_jobs=20, ml.enabled=true}
+[2019-12-15T11:29:14,121][INFO ][o.e.c.s.ClusterApplierService] [9jAGWs_] new_master {9jAGWs_}{9jAGWs_uQGmUPF4RyFkjTw}{2g1w5LQXSZ6gPKwgps9psw}{127.0.0.1}{127.0.0.1:9300}{ml.machine_memory=8589934592, xpack.installed=true, ml.max_open_jobs=20, ml.enabled=true}, reason: apply cluster state (from master [master {9jAGWs_}{9jAGWs_uQGmUPF4RyFkjTw}{2g1w5LQXSZ6gPKwgps9psw}{127.0.0.1}{127.0.0.1:9300}{ml.machine_memory=8589934592, xpack.installed=true, ml.max_open_jobs=20, ml.enabled=true} committed version [1] source [zen-disco-elected-as-master ([0] nodes joined)[, ]]])
+[2019-12-15T11:29:14,175][INFO ][o.e.x.s.t.n.SecurityNetty4HttpServerTransport] [9jAGWs_] publish_address {127.0.0.1:9200}, bound_addresses {[::1]:9200}, {127.0.0.1:9200}
+```
+
+We can see in the last line that is listening at 9200:
+
+```
+[2019-12-15T11:29:14,175][INFO ][o.e.x.s.t.n.SecurityNetty4HttpServerTransport] [9jAGWs_] publish_address {127.0.0.1:9200}, bound_addresses {[::1]:9200}, {127.0.0.1:9200}
+```
+
+Now we can use insomnia or any other HTTP REST client to make queries to the elasticsearch server:
+
+![assets/images/insomnia-elasticsearch-1.png](/assets/images/insomnia-elasticsearch-1.png)
+
+* [Useful Elasticsearch Example Queries](https://dzone.com/articles/23-useful-elasticsearch-example-queries) DZone
 
 ## Referencias para Elasticsearch
 
